Fixed white space problem and attempted to arrange the icons in the social media nav.

--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ h1 {
 .donuts {
 	width: 100%;
 	height: 100%;
+	display: block;
 }
 
 .dp {
@@ -82,8 +83,35 @@ h1 {
 	margin: 0;
 }
 
-.instagram {
+nav ul {
+	list-style: none;
+	display: block;
+}
+
+.left, .right, .center {
+	display: inline-block;
+}
+
+.left {
+	float: left;
+}
+
+.right {
+	float: right;
+}
+
+.center {
+	clear: both;
+}
+
+.social {
 	width: 33.333%;
+}
+
+.st0{fill:#333333;} .st1{fill:#FFFFFF;}
+
+.social:hover .st0 {
+
 }
 
 h2 {
